# vcfstatsalive

./: .gitignore  .gitmodules  AbstractStatCollector.cpp  AbstractStatCollector.h  BasicStatsCollector.cpp  BasicStatsCollector.h  ByGenotypeStratifier.h  BySampleStratifier.h  DummyStatsCollector.h  Makefile  Makefile.am  Makefile.in  Makefile.release  README.md  SampleBasicStatsCollector.h  aclocal.m4  config.h.in  configure  configure.ac  main.cpp  vcfStatsAliveCommon.hpp  vcfstats.cpp
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
src/: BasicStatsCollector.cpp  Makefile.am  Makefile.in  main.cpp  vcfStatsAliveCommon.hpp
test/: regression.py
test/data/: platinum-exome.htsapi.json  platinum-exome.json  platinum-exome.vcf.gz.tbi
